minor css corrections so that the preview area doesn't bleed into the command area, and so that it doesn't cover the bottom right corner

--- a/ubiquity/chrome/skin/skins/experimental.css
+++ b/ubiquity/chrome/skin/skins/experimental.css
@@ -96,6 +96,14 @@
   color: #fff;
 }
 
+#ubiquity-preview-container {
+  margin-top: 10px;
+}
+
+#ubiquity-browser {
+  width: 500px;
+}
+
 }
 
 @-moz-document url(chrome://ubiquity/content/suggest.html) {
